--- a/Atividades/exercicios/exercicio-2/styles/global.css
+++ b/Atividades/exercicios/exercicio-2/styles/global.css
@@ -1,38 +1,56 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 body{
     margin: 0px;
     padding: 0px;
     background: #e8f1f2;
+    min-height: 100vh;
 }
 
-header{
-    background: #1b98e0;
+header nav{
     color: #e8f1f2 ;
     display: flex;
     font-size: 18px;
-    gap: 18px;
-    font-family: 'Franklin Gothic', 'Arial Narrow', Arial, sans-serif;
-    padding: 8px 16px;
+    gap: 24px;
+    font-family: 'Raleway', sans-serif;
+    font-weight:300;
+    padding: 0px 16px;
+    align-items: center;
+    height: 100%;
+    justify-content: center;
+    position: relative;
+    z-index: 2;
+    background: rgb(48, 48, 48);
+    padding: 8px 0px;
+}
+
+header nav h1{
+    display: inline-block;
+    font-size: 40px;
+    margin: 0px 72px;
 }
 
 header a{
     color: #e8f1f2;
     text-decoration: none;
     opacity: 0.5;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
+header a:hover{
+    text-decoration: underline;
 }
 
 header a.atual{
-    color: #003459;
+    color: white;
     opacity: 1;
+    font-weight: 800;
 }
 
-
-header a:last-child{
-    margin-left: auto;
-}
-
-img.banner{
+header img.banner{
     width: 100%;
-    height: 300px;
+    height: 400px;
     object-fit: cover;
 }
 
